--- a/app/views/numenor/index.rhtml
+++ b/app/views/numenor/index.rhtml
@@ -1,7 +1,8 @@
 <h2>URLs</h2>
 <div class="box">
   <ul class="tabs">
-    <li><strong>Public Url Feed</strong></li>
+    <li class="active"><strong>Public URL Feed</strong></li>
+    <li><span>Friends URL Feed</span></li>
   </ul>
   
   <div class="small">
