--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -191,6 +191,17 @@ div#sidebar h3 {
   border-top: 4px solid #333;
 }
 
+div#sidebar h3 a {
+  font-size: 11px;
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+div#sidebar h3 a:hover {
+  text-decoration: underline;
+}
+
 div#sidebar h4 {
   margin-bottom: 10px;
   padding-top: 7px;
@@ -226,6 +237,10 @@ div#sidebar p.friends img {
   margin: 2px;
   border: 3px solid #fff;
   background-color: #fff;
+}
+
+div#sidebar div.box ul li {
+  padding: 0px;
 }
 
 div#sidebar div.box form label {
@@ -280,18 +295,29 @@ div#content ul.tabs li {
   float: left;
   margin-right: 5px;
   line-height: 12px;
-  background-color: #d6d6d6;
-  background-image: url('/images/interface/tab_left.gif');
+  background-color: #ebebeb;
+  background-image: url('/images/interface/tab_left_inactive.gif');
   background-position: top left;
   background-repeat: no-repeat;
 }
 
-div#content ul.tabs li strong {
+div#content ul.tabs li.active {
+  background-color: #d6d6d6;
+  background-image: url('/images/interface/tab_left_active.gif');
+}
+
+div#content ul.tabs li.active strong,
+div#content ul.tabs li span {
   display: block;
   padding: 8px 8px 4px 8px;
   background-image: url('/images/interface/tab_right.gif');
   background-position: top right;
   background-repeat: no-repeat;
+}
+
+div#content ul.tabs li span {
+  color: #999;
+  background-image: url('/images/interface/tab_right_active.gif');
 }
 
 div#content p.page_info {
@@ -313,6 +339,10 @@ div#content ul.feed li {
 
 div#content ul.feed li a:visited {
   color: #69c;
+}
+
+div#content ul.feed li a.disguised:visited {
+  color: #666;
 }
 
 div#content ul.feed li a.expand {
@@ -339,22 +369,6 @@ div#content ul.feed li.row1 {
 
 div#content ul.feed li.row2 {
   background-color: #f5f7fB;
-}
-
-div#content form {
-  margin-bottom: 20px;
-  padding: 15px 15px 5px 15px;
-  font-size: 11px;
-  border-top: 4px solid #ccc;
-  background-color: #ebebeb;
-}
-
-div#content form label {
-  float: left;
-  display: block;
-  width: 100px;
-  font-size: 11px;
-  line-height: 20px;
 }
 
 div#content p.pagination {
