--- a/app/views/categories/friends_urls.rhtml
+++ b/app/views/categories/friends_urls.rhtml
@@ -3,8 +3,8 @@
   <%= format_text @category.description if @category %>
   
   <ul class="tabs">
-    <li class="active"><%= link_to "Public URL Feed", :action => 'index' %></li>
-    <li><%= link_to "Friends URL Feed", :action => 'friends_urls', :name => @category.name %></li>
+    <li><%= link_to "Public URL Feed", :action => 'view', :name => @category.name %></li>
+    <li class="active"><%= link_to "Friends URL Feed", :action => 'friends_urls', :name => @category.name %></li>
   </ul>
   
   <div class="small">
