--- a/app/views/members/_link.rhtml
+++ b/app/views/members/_link.rhtml
@@ -6,10 +6,10 @@
   <%= favicon domain %><%= link_to "#{truncate(link.title, 100)}", :controller => 'links', :action => 'view', :code => link.code %>
   (<span onclick="copyIntoClipboard('<%= short_url link.code %>')" class="fake_link"><%= link.code %></span>)
   <a class="expand fake_link" id="toggle_<%= link.id %>_plus" onclick="Element.show('info_<%= link.id %>'); Element.hide(this); Element.show('toggle_<%= link.id %>_minus')">
-    <img src="/images/interface/url_plus.gif" width="14" height="14" alt="Show details" />
+    <%= image_tag "interface/url_plus.gif", :size => "16x16", :alt => "Show details" %>
   </a>
   <a class="expand fake_link" id="toggle_<%= link.id %>_minus" style="display: none;" onclick="Element.hide('info_<%= link.id %>'); Element.hide(this); Element.show('toggle_<%= link.id %>_plus')">
-    <img src="/images/interface/url_minus.gif" width="14" height="14" alt="Hide details" />
+    <%= image_tag "interface/url_minus.gif", :size => "16x16", :alt => "Hide details" %>
   </a>
   <p id="info_<%= link.id %>" class="desc" style="display: none;">
     <%= link_to domain.domain, "#{domain.scheme}://#{domain.domain}", :class => "disguised" %> &#8212; <span class="text">Temporarily blank for now.</span>
