--- a/app/views/numenor/friends_urls.rhtml
+++ b/app/views/numenor/friends_urls.rhtml
@@ -1,10 +1,8 @@
-<h2>URLs <%= @category.name == "Uncategorized" ? "not categorized" : "in #{@category.name}" %></h2>
+<h2>URLs</h2>
 <div class="box">
-  <%= format_text @category.description if @category %>
-  
   <ul class="tabs">
-    <li class="active"><%= link_to "Public URL Feed", :action => 'index' %></li>
-    <li><%= link_to "Friends URL Feed", :action => 'friends_urls', :name => @category.name %></li>
+    <li><%= link_to "Public URL Feed", :action => 'view' %></li>
+    <li class="active"><%= link_to "Friends URL Feed", :action => 'friends_urls' %></li>
   </ul>
   
   <div class="small">
@@ -25,6 +23,6 @@
   <ul class="feed">
     <%= render :partial => 'link', :collection => @links %>
 	</ul>
-
-  <%= will_paginate @links %>
+	
+	<%= will_paginate @links %>
 </div>
