--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -233,14 +233,40 @@ div#sidebar div.box p.friends {
   font-size: 0px;
 }
 
-div#sidebar p.friends img {
+div#sidebar div.box p.friends img {
   margin: 2px;
   border: 3px solid #fff;
   background-color: #fff;
 }
 
-div#sidebar div.box ul li {
-  padding: 0px;
+div#sidebar div.box div.buttons {
+  margin-bottom: 8px;
+}
+
+div#sidebar div.box p.button {
+  float: left;
+  height: 21px;
+  margin-bottom: 2px;
+  line-height: 11px;
+  background-color: #fff;
+  background-image: url('/images/interface/box_button_left.gif');
+  background-position: left center;
+  background-repeat: no-repeat;
+}
+
+div#sidebar div.box p.button a {
+  display: block;
+  padding: 5px 7px;
+  color: #333;
+  font-weight: bold;
+  text-decoration: none;
+  background-image: url('/images/interface/box_button_right.gif');
+  background-position: right center;
+  background-repeat: no-repeat;
+}
+
+div#sidebar div.box p.button a:hover {
+  color: #06c;
 }
 
 div#sidebar div.box form label {
@@ -296,28 +322,37 @@ div#content ul.tabs li {
   margin-right: 5px;
   line-height: 12px;
   background-color: #ebebeb;
-  background-image: url('/images/interface/tab_left_inactive.gif');
   background-position: top left;
   background-repeat: no-repeat;
 }
 
 div#content ul.tabs li.active {
   background-color: #d6d6d6;
-  background-image: url('/images/interface/tab_left_active.gif');
+  background-image: url('/images/interface/tab_left.gif');
 }
 
-div#content ul.tabs li.active strong,
-div#content ul.tabs li span {
+div#content ul.tabs li a,
+div#content ul.tabs li.active a {
   display: block;
   padding: 8px 8px 4px 8px;
-  background-image: url('/images/interface/tab_right.gif');
+  text-decoration: none;
   background-position: top right;
   background-repeat: no-repeat;
 }
 
-div#content ul.tabs li span {
+div#content ul.tabs li a {
   color: #999;
-  background-image: url('/images/interface/tab_right_active.gif');
+}
+
+div#content ul.tabs li a:hover {
+  color: #333;
+  background-color: #d6d6d6;
+}
+
+div#content ul.tabs li.active a {
+  color: #333;
+  font-weight: bold;
+  background-image: url('/images/interface/tab_right.gif');
 }
 
 div#content p.page_info {
@@ -347,7 +382,6 @@ div#content ul.feed li a.disguised:visited {
 
 div#content ul.feed li a.expand {
   float: right;
-  margin-top: -1px;
 }
 
 div#content ul.feed li img.favicon {
