--- a/app/views/numenor/friends_urls.rhtml
+++ b/app/views/numenor/friends_urls.rhtml
@@ -1,7 +1,7 @@
 <h2>URLs</h2>
 <div class="box">
   <ul class="tabs">
-    <li><%= link_to "Public URL Feed", :action => 'view' %></li>
+    <li><%= link_to "Public URL Feed", :action => 'index' %></li>
     <li class="active"><%= link_to "Friends URL Feed", :action => 'friends_urls' %></li>
   </ul>
   
