Refining URL getting process, plus addition of Rev # in footer

--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -102,6 +102,12 @@
     </div>
     
     <br class="clear" />
+    
+    <p class="small superfade">
+      <strong>The Urld Development Build</strong><br/>
+      This page took ##### seconds to load. Revision 29, November 11, 2008.<br/>
+      Note: This is updated by hand and not always accurate.
+    </p>
   </div>
 
 </body>
