--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -105,7 +105,7 @@
     
     <p class="small superfade">
       <strong>The Urld Development Build</strong><br/>
-      This page took ##### seconds to load. Revision 29, November 11, 2008.<br/>
+      This page took ##### seconds to load. Revision <%= @svn_info['Revision'] %>, <%= longdate Time.parse(@svn_info['Last Changed Date']) %>.<br/>
       Note: This is updated by hand and not always accurate.
     </p>
   </div>
