--- a/app/views/categories/view.rhtml
+++ b/app/views/categories/view.rhtml
@@ -4,7 +4,9 @@
   
   <ul class="tabs">
     <li class="active"><%= link_to "Public URL Feed", :action => 'index' %></li>
+    <%- if session[:logged_in] == true -%>
     <li><%= link_to "Friends URL Feed", :action => 'friends_urls', :name => @category.name %></li>
+    <%- end -%>
   </ul>
   
   <div class="small">
