--- a/app/views/members/register.rhtml
+++ b/app/views/members/register.rhtml
@@ -1,13 +1,34 @@
-<% form_tag do %>
-  <p>
-    <%= label_tag "member", "username" %> <%= text_field "member", "username" %><br/>
-    <%= label_tag "member", "password" %> <%= password_field "member", "password" %>
-  </p>
-  <p>
-    <%= label_tag "member", "first_name" %> <%= text_field "member", "first_name" %><br/>
-    <%= label_tag "member", "last_name" %> <%= text_field "member", "last_name" %><br/>
-    <%= label_tag "member", "email_address" %> <%= text_field "member", "email_address" %><br/>
-    <%= label_tag "member", "gender" %> <%= text_field "member", "gender" %>
-  </p>
-  <%= submit_tag "Create account" %>
-<%- end -%>
+<h2>Register</h2>
+<div class="box">
+  <p class="fade small"><em>This page may be changed in the future.</em></p>
+  <p><strong>&darr;</strong> Please start by entering your account details below.</p>
+  
+  <% form_tag do %>
+  <fieldset>
+    <ol>
+      <li>
+        <%= label_tag "member", "username" %> <%= text_field "member", "username" %>
+      </li>
+      <li>
+        <%= label_tag "member", "password" %> <%= password_field "member", "password" %>
+      </li>
+      <li>
+        <%= label_tag "member", "first_name" %> <%= text_field "member", "first_name" %>
+      </li>
+      <li>
+        <%= label_tag "member", "last_name" %> <%= text_field "member", "last_name" %>
+      </li>
+      <li>
+        <%= label_tag "member", "email_address" %> <%= text_field "member", "email_address" %>
+      </li>
+      <li>
+        <%= label_tag "member", "gender" %>
+        <%= select_tag(:gender, options_for_select([['Male', 1], ['Female', 2], ['Other', 3]])) %>
+      </li>
+      <li>
+      <%= submit_tag "Create account" %>
+      </li>
+    </ol>
+  </fieldset>
+  <%- end -%>
+</div>
