--- a/app/views/members/view.rhtml
+++ b/app/views/members/view.rhtml
@@ -2,7 +2,9 @@
 <div class="box">
   <ul class="tabs">
     <li class="active"><%= link_to "Public URL Feed", :action => 'view', :username => @member.username %></li>
+    <%- if session[:logged_in] == true -%>
     <li><%= link_to "Friends URL Feed", :action => 'friends_urls', :username => @member.username %></li>
+    <%- end -%>
   </ul>
   
   <div class="small">
