Registration gender actually works now!

--- a/app/views/members/register.rhtml
+++ b/app/views/members/register.rhtml
@@ -23,7 +23,7 @@
       </li>
       <li>
         <%= label_tag "member", "gender" %>
-        <%= select_tag(:gender, options_for_select([['Male', 1], ['Female', 2], ['Other', 3]])) %>
+        <%= select_tag(:gender, options_for_select([['Male'], ['Female'], ['Other']])) %>
       </li>
       <li>
       <%= submit_tag "Create account" %>
