--- a/app/views/members/view.rhtml
+++ b/app/views/members/view.rhtml
@@ -1,9 +1,9 @@
 <h2><%= @member.username %>'s URL Feed</h2>
 <div class="box">
   <ul class="tabs">
-    <li class="active"><%= link_to "Public URL Feed", :action => 'view', :username => @member.username %></li>
-    <%- if session[:logged_in] == true -%>
-    <li><%= link_to "Friends URL Feed", :action => 'friends_urls', :username => @member.username %></li>
+    <li class="active"><%= link_to "#{pronoun(@member, 'his_her').capitalize} URL Feed", :action => 'view', :username => @member.username %></li>
+    <%- unless YAML.load(@member.friends).empty? -%>
+    <li><%= link_to "#{pronoun(@member, 'his_her').capitalize} Friends URL Feed", :action => 'friends_urls', :username => @member.username %></li>
     <%- end -%>
   </ul>
   
