--- a/public/stylesheets/management.css
+++ b/public/stylesheets/management.css
@@ -10,6 +10,15 @@
   background-color: #f5f7fB;
 }
 
+/* tags */
+span.tag {
+  margin-left: 5px;
+  padding: 0 2px;
+  font-size: 10px;
+}
+
+span.tag.superuser { color: #fff; background-color: #f77; }
+
 table.style tr th {
   padding-bottom: 5px;
   font-size: 11px;
