--- a/app/views/layouts/application.rhtml
+++ b/app/views/layouts/application.rhtml
@@ -67,42 +67,7 @@
       -%>
       <%= render "/sidebars/#{params[:controller]}/#{params[:action]}" %>
       <%- else -%>
-      <%- if session[:logged_in] == true -%>
-      <h3>Hi, <%= link_to @master_member.username, :controller => 'members', :action => 'view', :username => @master_member.username %></h3>
-      <div class="box">
-        <h5>You &amp; Your Friends</h5>
-        <p class="friends">
-          <%= friends_icons @master_member, :include_member => true %>
-        </p>
-      </div>
-      <%- else -%>
-      <h3>Login</h3>
-      <div class="box">
-        <% form_tag :controller => 'members', :action => 'login' do %>
-          <p>
-            <%= label_tag "member", "username" %> <%= text_field "member", "username" %>
-            <%= label_tag "member", "password", :name => "Password <strong><a href=\"#\">?</a></strong>" %> <%= password_field "member", "password" %>
-            <%= submit_tag "Login" %>
-          </p>
-        <% end %>
-      </div>
-      <%- end -%>
-      
-      <h3>Categories</h3>
-      <h4>General Categories</h4>
-      <ul>
-        <%- @categories.each do |c| -%>
-        <li><%= link_to c.name, :controller => 'categories', :action => 'view', :name => c.name %></li>
-        <%- end -%>
-        <li><%= link_to "Uncategorized", :controller => 'categories', :action => 'view', :name => "Uncategorized" %></li>
-      </ul>
-
-      <h4>Subcategories</h4>
-      <ul>
-        <%- @subcategories.each do |c| -%>
-        <li><%= link_to c.name, :controller => 'categories', :action => 'view', :name => c.name %></li>
-        <%- end -%>
-      </ul>
+      <%= render "/sidebars/default/default" %>
       <%- end -%>
     </div>
     
