--- a/app/views/sidebars/default/default.rhtml
+++ b/app/views/sidebars/default/default.rhtml
@@ -28,9 +28,11 @@
   <li><%= link_to "Uncategorized", :controller => 'categories', :action => 'view', :name => "Uncategorized" %></li>
 </ul>
 
+<%- unless @subcategories.empty? -%>
 <h4>Subcategories</h4>
 <ul>
   <%- @subcategories.each do |c| -%>
   <li><%= link_to c.name, :controller => 'categories', :action => 'view', :name => c.name %></li>
   <%- end -%>
 </ul>
+<%- end -%>
