--- a/public/stylesheets/default.css
+++ b/public/stylesheets/default.css
@@ -341,6 +341,15 @@ div#content div.box {
   padding-left: 20px;
 }
 
+div#content div.box h3 {
+  margin-bottom: 10px;
+  padding-top: 7px;
+  font-size: 11px;
+  color: #999;
+  font-weight: normal;
+  border-top: 4px solid #d6d6d6;
+}
+
 div#content ul.tabs {
   height: 24px;
   border-bottom: 4px solid #d6d6d6;
